--- a/talk-demo/web/nginx.conf
+++ b/talk-demo/web/nginx.conf
@@ -8,6 +8,9 @@ http {
     location /api/ {
         proxy_pass      http://app:5000/;
     }
+    location /api2/ {
+        proxy_pass      http://app2:6000/;
+    }
   }
 }
 
